Update and rename login.html to index.html

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         form.addEventListener("submit", (e) => {
             e.preventDefault();
             alert("Logged in successfully!");
-            window.location.href = "home page/inde.html";
+            window.location.href = "home.html";
         });
     </script>
     <script>
