--- a/sign_up.html
+++ b/sign_up.html
@@ -112,14 +112,14 @@
             form.addEventListener("submit", (e) => {
                 e.preventDefault();
                 alert("Account Created successfully!");
-                window.location.href = "home page/inde.html";
+                window.location.href = "home.html";
             });
         </script>
         <script>
             const login = document.getElementById("login");
             login.addEventListener("click", (e) => {
                 e.preventDefault();
-                window.location.href = "login.html";
+                window.location.href = "index.html";
             });
         </script>
 </body>
