--- a/products.html
+++ b/products.html
@@ -10,29 +10,25 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #e0f7fa;
+            background-color: #ffffff;
         }
         header {
-            background-color: #007bb5;
+            background-color: #0073e6;
             color: #fff;
             padding: 20px;
             text-align: center;
-            position: sticky;
-            top: 0;
-            z-index: 1000;
+            
         }
         .navbar {
             display: flex;
             justify-content: center;
-            background-color: #007bb5;
+            background-color: #0073e6;
             color: #fff;
             padding: 10px;
-        }
-        nav {
-            background-color: #007bb5;
-            color: #fff;
             text-align: center;
-            padding: 10px;
+            position: sticky;
+            top: 0;
+            z-index: 1000;
         }
         nav a {
             color: #fff;
@@ -69,7 +65,7 @@
         .product h3 {
             margin: 10px;
             font-size: 1.2rem;
-            color: #007bb5;
+            color: #0073e6;
         }
         .product p {
             margin: 10px;
@@ -78,14 +74,14 @@
         .product .price {
             margin: 10px;
             font-size: 1.1rem;
-            color: #007bb5;
+            color: #0073e6;
         }
         .product .rating {
             margin: 10px;
             color: #ff9800;
         }
         .product button {
-            background-color: #007bb5;
+            background-color: #0073e6;
             color: white;
             border: none;
             padding: 10px;
@@ -95,7 +91,7 @@
             transition: background-color 0.3s;
         }
         .product button:hover {
-            background-color: #005f8b;
+            background-color: #53cd5d;
         }
         footer {
             text-align: center;
@@ -106,36 +102,6 @@
             width: 100%;
             bottom: 0;
         }
-        .carousel {
-            position: relative;
-            max-width: 800px;
-            margin: 20px auto;
-        }
-        .carousel-inner {
-            display: flex;
-            overflow: hidden;
-            border-radius: 10px;
-        }
-        .carousel-item {
-            min-width: 100%;
-            transition: transform 0.5s ease-in-out;
-        }
-        .carousel-control-prev, .carousel-control-next {
-            position: absolute;
-            top: 50%;
-            transform: translateY(-50%);
-            background-color: rgba(0, 0, 0, 0.5);
-            color: white;
-            border: none;
-            padding: 10px;
-            cursor: pointer;
-        }
-        .carousel-control-prev {
-            left: 10px;
-        }
-        .carousel-control-next {
-            right: 10px;
-        }
     </style>
 </head>
 <body>
@@ -145,8 +111,8 @@
     <nav class="navbar">
         <a class="navbar-brand" href="home.html">Home</a>
         <a class="navbar-brand" href="products.html">Products</a>
-        <a class="navbar-brand" href="#">Contact</a>
-        <a class="navbar-brand" href="#">About</a>
+        <a class="navbar-brand" href="contact.html">Contact</a>
+        <a class="navbar-brand" href="about.html">About</a>
     </nav>
 
     <div class="container">
