--- a/products.html
+++ b/products.html
@@ -119,6 +119,7 @@
         <div class="product">
             <img src="https://via.placeholder.com/250" alt="Gadget 1">
             <h3>Smartphone</h3>
+            <img src="" alt="">
             <p>Latest model with cutting-edge technology.</p>
             <p class="price">$699</p>
             <p class="rating">★★★★☆</p>
