--- a/products.html
+++ b/products.html
@@ -123,6 +123,7 @@
             <p class="price">$699</p>
             <p class="rating">★★★★☆</p>
             <button>Add to Cart</button>
+            <button><a href="buynow.html">Buy Now</a></button>
         </div>
         <div class="product">
             <img src="https://via.placeholder.com/250" alt="Gadget 2">
