--- a/home.html
+++ b/home.html
@@ -120,13 +120,13 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="images/christmas.jpg" class="d-block w-100" alt="First slide showing an electronic gadget">
+                <img src="images/christmas.jpg" class="d-block w-100" alt="christmas">
             </div>
             <div class="carousel-item">
-                <img src="images/phone.jpg" class="d-block w-100" alt="Second slide showcasing gadgets">
+                <img src="images/phone.jpg" class="d-block w-100" alt="phone">
             </div>
             <div class="carousel-item">
-                <img src="images/new year.jpg" class="d-block w-100" alt="Third slide highlighting offers">
+                <img src="images/new year.jpg" class="d-block w-100" alt="new year">
             </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
