products image added

--- a/products.html
+++ b/products.html
@@ -117,164 +117,148 @@
 
     <div class="container">
         <div class="product">
-            <img src="https://via.placeholder.com/250" alt="Gadget 1">
-            <h3>Smartphone</h3>
-            <img src="" alt="">
-            <p>Latest model with cutting-edge technology.</p>
-            <p class="price">$699</p>
-            <p class="rating">★★★★☆</p>
+            <img src="creatathon/IMG-20241224-WA0024.jpg" alt="oneplus" width="150%" height="35%">
+            <h3>The OnePlus 11 5G boasts a (6.7-inch 2K 120Hz) AMOLED display<br> with 10-bit color support for stunning visuals.</h3>
+            <p></p>
+            <p class="price">Price  :  ₹34,599</p>
+            <p class="rating">Rating<br>★★★★☆</p>
             <button>Add to Cart</button>
         </div>
         <div class="product">
-            <img src="https://via.placeholder.com/250" alt="Gadget 2">
-            <h3>Tablet</h3>
-            <p>High-resolution display and powerful processor.</p>
-            <p class="price">$499</p>
-            <p class="rating">★★★★☆</p>
+            <img src="creatathon/ERcJ2Lub.jpg" alt="tab" height="35%">
+            <h3>The iPad Pro (11-inch or 12.9-inch) with a Magic Keyboard, featuring a Liquid Retina display, 
+                <br>Apple M1 chip, up to 16GB RAM, and up to 1TB storage.</h3>
+            <p class="price">Price   :   ₹71,900</p>
+            <p class="rating">Rating <br>★★★★☆</p>
             <button>Add to Cart</button>
         </div>
         <div class="product">
-            <img src="https://via.placeholder.com/250" alt="Gadget 3">
-            <h3>Laptop</h3>
-            <p>Lightweight and portable with long battery life.</p>
-            <p class="price">$999</p>
-            <p class="rating">★★★★★</p>
+            <img src="creatathon/lapto.jpg" alt="laptop" height="230px">
+            <h3>The Dell XPS 13 9310 is a premium ultraportable laptop with a 13.4" FHD+ display,<br> 11th Gen Intel Core processors, and a sleek design.</h3>
+            <p class="price">Price  :  ₹1,50,990</p>
+            <p class="rating">Rating <br>★★★★★</p>
             <button>Add to Cart</button>
         </div>
         <div class="product">
-            <img src="https://via.placeholder.com/250" alt="Gadget 4">
-            <h3>Smartwatch</h3>
-            <p>Track your fitness and stay connected.</p>
-            <p class="price">$199</p>
-            <p class="rating">★★★★☆</p>
+            <img src="creatathon/tKEhPvgk.jpg" alt="Gadget 4">
+            <h3>The Amazfit GTR 2 is a sleek design with 1.39-inch AMOLED display <br>with 454 x 454 pixel resolution, providing clear visuals.</h3>
+            <p class="price">Price   :  ₹7,999</p>
+            <p class="rating">Rating <br>★★★★☆</p>
             <button>Add to Cart</button>
         </div>
         <div class="product">
-            <img src="https://via.placeholder.com/250" alt="Gadget 5">
-            <h3>Headphones</h3>
-            <p>Noise-cancelling with superior sound quality.</p>
-            <p class="price">$299</p>
-            <p class="rating">★★★★★</p>
+            <img src="creatathon/realme TechLife Buds T100 Bluetooth Truly Wireless in Ear Earbuds with mic, AI ENC for Calls, Google.jpg" alt="Gadget 5" height="43%">
+            <h3>realme Buds T110 (RMA2306) with AI ENC for calls, <br>38 hours of Playback and Deep Bass Bluetooth  (Punk Black, True Wireless)</h3>
+            <p class="price">Price   :   ₹1,200</p>
+            <p class="rating">Ratings:<br>★★★★★</p>
             <button>Add to Cart</button>
         </div>
         <div class="product">
-            <img src="https://via.placeholder.com/250" alt="Gadget 6">
-            <h3>Camera</h3>
-            <p>Capture stunning photos and videos.</p>
-            <p class="price">$799</p>
-            <p class="rating">★★★★☆</p>
+            <img src="creatathon/Nikon D5300 Advanced Beginner DSLR_ Guided Tour _ Expert photography blogs, tip, techniques, camera reviews - Adorama Learning Center.jpg" alt="Gadget 6"  height="47%">
+            <h3>NIKON Z6III Mirrorless Camera Body with Nikkor Z 24-70mm f/4 S(Black)</h3>
+            <p class="price">Price   :  ₹2,92,990</p>
+            <p class="rating">Rating <br>★★★★☆</p>
             <button>Add to Cart</button>
         </div>
         <div class="product">
-            <img src="https://via.placeholder.com/250" alt="Gadget 7">
-            <h3>Drone</h3>
-            <p>High-performance drone with 4K camera.</p>
-            <p class="price">$599</p>
-            <p class="rating">★★★★☆</p>
+            <img src="creatathon/The Best Drone Cameras Under $500.jpg" alt="Gadget 7">
+            <h3>Hardbuzz E88 Pro Drone 4k HD foldable Drone With Camera 4k HD<br> Mini 720p Live Video Drone Drone</h3>
+            <p class="price">Price   :  ₹2,800</p>
+            <p class="rating">Rating<br>★★★★☆</p>
             <button>Add to Cart</button>
         </div>
         <div class="product">
-            <img src="https://via.placeholder.com/250" alt="Gadget 8">
-            <h3>VR Headset</h3>
-            <p>Immersive virtual reality experience.</p>
-            <p class="price">$399</p>
-            <p class="rating">★★★★☆</p>
+            <img src="creatathon/Meta Quest 2 — Advanced All-In-One Virtual Reality Headset — 128 GB.jpg" alt="Gadget 8"  height="50%">
+            <h3>VIRUSU Monster 3d VR headset box <br>with remote controller for gaming  (Smart Glasses, Black)</h3>
+            <p class="price">Price   :  $399</p>
+            <p class="rating">Rating<br>★★★★☆</p>
             <button>Add to Cart</button>
         </div>
         <div class="product">
-            <img src="https://via.placeholder.com/250" alt="Gadget 9">
-            <h3>Bluetooth Speaker</h3>
+            <img src="creatathon/pTron Fusion Evo v2 10W Bluetooth Speaker 5_0 Mini Soundbar, 10Hrs Playback, Stereo Soundbar for Phone_TV_Laptop_Tablets_Projectors, Multi Modes Aux_TF Card_USB Drive & 1200mAh Battery (Grey).jpg" alt="Gadget 9"   height="35%">
+            <h3>PTron Jazz Pro X1 240 W Bluetooth Soundbar  (Black, 2.1 Channel)</h3>
             <p>Portable speaker with excellent sound quality.</p>
-            <p class="price">$149</p>
-            <p class="rating">★★★★☆</p>
+            <p class="price">Price   :  ₹2,599</p>
+            <p class="rating">Rating<br>★★★★☆</p>
             <button>Add to Cart</button>
         </div>
         <div class="product">
-            <img src="https://via.placeholder.com/250" alt="Gadget 10">
-            <h3>Smart Home Hub</h3>
+            <img src="creatathon/Echo (4th Gen) _ With premium sound, smart home hub, and Alexa _ Charcoal.jpg" alt="Gadget 10">
+            <h3>Alexa Amazon Echo (4th Gen)| Premium sound powered by Dolby <br>and Alexa with Alexa Assistant Smart Speaker  (Black)</h3>
             <p>Control your smart home devices with ease.</p>
-            <p class="price">$129</p>
-            <p class="rating">★★★★☆</p>
+            <p class="price">Price   :  ₹9,999</p>
+            <p class="rating">Rating<br>★★★★☆</p>
             <button>Add to Cart</button>
         </div>
         <div class="product">
-            <img src="https://via.placeholder.com/250" alt="Gadget 11">
-            <h3>Fitness Tracker</h3>
-            <p>Monitor your health and fitness activities.</p>
-            <p class="price">$99</p>
-            <p class="rating">★★★★☆</p>
+            <img src="creatathon/Фитнес-браслет Xiaomi Mi Smart Band 6 помогает….jpg" alt="Gadget 11"  height="45%" width="45%">
+            <h3>Mi Smart Band 5  (Black Strap, Size : Regular)</h3>
+            <p class="price">Price   :  ₹1,944</p>
+            <p class="rating">Rating<br>★★★★☆</p>
             <button>Add to Cart</button>
         </div>
         <div class="product">
-            <img src="https://via.placeholder.com/250" alt="Gadget 12">
-            <h3>Smart Light Bulb</h3>
-            <p>Energy-efficient lighting with smart control.</p>
-            <p class="price">$29</p>
-            <p class="rating">★★★★☆</p>
+            <img src="creatathon/Venanoci Smart Light Bulb 2_4G(Not 5G), WiFi LED RGBCW Color Changing Bulbs 2700K-6500K with White Lights Work with Alexa, Echo, Google Home and IFTTT(No Hub Required), A19 E26 60W Equivalent-3 Pack.jpg" alt="Gadget 12">
+            <h3>HAVELLS 9w Glamax Color B22 Smart Bulb</h3>
+            <p class="price">Price   :  ₹799</p>
+            <p class="rating">Rating<br>★★★★☆</p>
             <button>Add to Cart</button>
         </div>
         <div class="product">
-            <img src="https://via.placeholder.com/250" alt="Gadget 13">
-            <h3>Wireless Charger</h3>
-            <p>Fast and convenient wireless charging.</p>
-            <p class="price">$49</p>
-            <p class="rating">★★★★☆</p>
+            <img src="creatathon/Joby Magnetic USB-C Wireless Phone Charger.jpg" alt="Gadget 13">
+            <h3>Apple MagSafe MHXH3ZM/A Charging Pad</h3>
+            <p class="price">Price   :  ₹4,500</p>
+            <p class="rating">Rating<br>★★★★☆</p>
             <button>Add to Cart</button>
         </div>
         <div class="product">
-            <img src="https://via.placeholder.com/250" alt="Gadget 14">
-            <h3>Smart Thermostat</h3>
-            <p>Control your home temperature remotely.</p>
-            <p class="price">$199</p>
-            <p class="rating">★★★★☆</p>
+            <img src="creatathon/LEVOIT Smart Thermostat for Home, WiFi….jpg" alt="Gadget 14">
+            <h3>amiciSmart WIFI Digital Thermostat, AC220V Temperature Controller -40°~99.9°C <br>for Incubator Temperature Sensor and Controller Electronic Hobby Kit</h3>
+            <p class="price">Price   :  ₹3,279</p>
+            <p class="rating">Rating<br>★★★★☆</p>
             <button>Add to Cart</button>
         </div>
         <div class="product">
-            <img src="https://via.placeholder.com/250" alt="Gadget 15">
-            <h3>Robot Vacuum</h3>
+            <img src="creatathon/6 Best Robot Vacuums for the Easiest Cleaning Ever.jpg" alt="Gadget 15">
+            <h3>Mi Robot Vacuum Cleaner S10 Robotic Floor Cleaner (WiFi Connectivity)  (Black)</h3>
             <p>Automated cleaning with smart navigation.</p>
-            <p class="price">$299</p>
-            <p class="rating">★★★★☆</p>
+            <p class="price">Price   :  ₹16,999</p>
+            <p class="rating">Rating<br>★★★★☆</p>
             <button>Add to Cart</button>
         </div>
         <div class="product">
-            <img src="https://via.placeholder.com/250" alt="Gadget 16">
-            <h3>Smart Doorbell</h3>
-            <p>See and talk to visitors from your phone.</p>
-            <p class="price">$149</p>
-            <p class="rating">★★★★☆</p>
+            <img src="creatathon/Up to 25_ Off.jpg" alt="Gadget 16" height="50%">
+            <h3>amiciSmart Automatic Motion Activated Door Bell with PIR Sensor,<br>36 Chime and RGB Indication Wireless Door Chime  (36 Tunes)</h3>
+            <p class="price">price   :  ₹2,099</p>
+            <p class="rating">Rating<br>★★★★☆</p>
             <button>Add to Cart</button>
         </div>
         <div class="product">
-            <img src="https://via.placeholder.com/250" alt="Gadget 17">
-            <h3>Streaming Device</h3>
-            <p>Stream your favorite shows and movies.</p>
-            <p class="price">$49</p>
-            <p class="rating">★★★★☆</p>
+            <img src="creatathon/Amazon Fire TV Stick, sharp picture quality, fast streaming, free & live TV, Alexa Voice Remote with TV controls.jpg" alt="Gadget 17"  height="50%">
+            <h3>Firetv Stick Lite with all-new Alexa Voice Remote Lite, HD Media Streaming Device  (Black)</h3>
+            <p class="price">Price   :  ₹3,399</p>
+            <p class="rating">Rating<br>★★★★☆</p>
             <button>Add to Cart</button>
         </div>
         <div class="product">
-            <img src="https://via.placeholder.com/250" alt="Gadget 18">
-            <h3>Portable Projector</h3>
-            <p>Watch movies and presentations anywhere.</p>
-            <p class="price">$299</p>
-            <p class="rating">★★★★☆</p>
+            <img src="creatathon/Ultimate Home Theater Android 110 Projector with 4K HD and WiFi 6 - HY300-US-NEW.jpg" alt="Gadget 18"  height="50%">
+            <h3>TOPPRO HY300 1GB/8GB, HD Android 11 Projector WiFi 6/BT 5.0 180° Rotation Auto Keystone<br> (4500 lm / 1 Speaker / Wireless / Remote Controller) Portable Projector  (White)</h3>
+            <p class="price">Price   :  ₹6,149</p>
+            <p class="rating">Rating<br>★★★★☆</p>
             <button>Add to Cart</button>
         </div>
         <div class="product">
-            <img src="https://via.placeholder.com/250" alt="Gadget 19">
-            <h3>Smart Lock</h3>
-            <p>Secure your home with smart access control.</p>
-            <p class="price">$199</p>
-            <p class="rating">★★★★☆</p>
+            <img src="creatathon/digital locks.jpg" alt="Gadget 19">
+            <h3>Godrej Catus Connect I Smart Digital Lock for Wooden Door |<br> 5 in 1 Access I 3 Bolts Smart Door Lock</h3>
+            <p class="price">Price   :  ₹12,129</p>
+            <p class="rating">Rating<br>★★★★☆</p>
             <button>Add to Cart</button>
         </div>
         <div class="product">
-            <img src="https://via.placeholder.com/250" alt="Gadget 20">
-            <h3>Smart Plug</h3>
-            <p>Control your appliances remotely.</p>
-            <p class="price">$29</p>
-            <p class="rating">★★★★☆</p>
+            <img src="creatathon/Smart Plug EIGHTREE, Alexa Smart Plugs That Work with Alexa and Google Home.jpg" alt="Gadget 20">
+            <h3>OZONE (10A+16A)x2 WiFi Smart Plug with Energy Monitoring with <br>Voice & App Control Smart Plug  (White)</h3>
+            <p class="price">Price   :  ₹3,508</p>
+            <p class="rating">Rating<br>★★★★☆</p>
             <button>Add to Cart</button>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
