--- a/products.html
+++ b/products.html
@@ -117,7 +117,7 @@
 
     <div class="container">
         <div class="product">
-            <img src="creatathon/IMG-20241224-WA0024.jpg" alt="oneplus" width="150%" height="35%">
+            <img src="creatathon/oneplusmobile.jpg" alt="oneplus" width="150%" height="35%">
             <h3>The OnePlus 11 5G boasts a (6.7-inch 2K 120Hz) AMOLED display<br> with 10-bit color support for stunning visuals.</h3>
             <p></p>
             <p class="price">Price  :  ₹34,599</p>
@@ -126,7 +126,7 @@
             <button><a href="buynow.html">Buy Now</a></button>
         </div>
         <div class="product">
-            <img src="creatathon/ERcJ2Lub.jpg" alt="tab" height="35%">
+            <img src="creatathon/tab.jpg" alt="tab" height="35%">
             <h3>The iPad Pro (11-inch or 12.9-inch) with a Magic Keyboard, featuring a Liquid Retina display, 
                 <br>Apple M1 chip, up to 16GB RAM, and up to 1TB storage.</h3>
             <p class="price">Price   :   ₹71,900</p>
@@ -141,42 +141,42 @@
             <button>Add to Cart</button>
         </div>
         <div class="product">
-            <img src="creatathon/tKEhPvgk.jpg" alt="Gadget 4">
+            <img src="creatathon/smartwatch.jpg" alt="Gadget 4">
             <h3>The Amazfit GTR 2 is a sleek design with 1.39-inch AMOLED display <br>with 454 x 454 pixel resolution, providing clear visuals.</h3>
             <p class="price">Price   :  ₹7,999</p>
             <p class="rating">Rating <br>★★★★☆</p>
             <button>Add to Cart</button>
         </div>
         <div class="product">
-            <img src="creatathon/realme TechLife Buds T100 Bluetooth Truly Wireless in Ear Earbuds with mic, AI ENC for Calls, Google.jpg" alt="Gadget 5" height="43%">
+            <img src="creatathon/realme buds.jpg" alt="airpods" height="43%">
             <h3>realme Buds T110 (RMA2306) with AI ENC for calls, <br>38 hours of Playback and Deep Bass Bluetooth  (Punk Black, True Wireless)</h3>
             <p class="price">Price   :   ₹1,200</p>
             <p class="rating">Ratings:<br>★★★★★</p>
             <button>Add to Cart</button>
         </div>
         <div class="product">
-            <img src="creatathon/Nikon D5300 Advanced Beginner DSLR_ Guided Tour _ Expert photography blogs, tip, techniques, camera reviews - Adorama Learning Center.jpg" alt="Gadget 6"  height="47%">
+            <img src="creatathon/nikon camera.jpg" alt="camera"  height="47%">
             <h3>NIKON Z6III Mirrorless Camera Body with Nikkor Z 24-70mm f/4 S(Black)</h3>
             <p class="price">Price   :  ₹2,92,990</p>
             <p class="rating">Rating <br>★★★★☆</p>
             <button>Add to Cart</button>
         </div>
         <div class="product">
-            <img src="creatathon/The Best Drone Cameras Under $500.jpg" alt="Gadget 7">
+            <img src="creatathon/Drone.jpg" alt="drone">
             <h3>Hardbuzz E88 Pro Drone 4k HD foldable Drone With Camera 4k HD<br> Mini 720p Live Video Drone Drone</h3>
             <p class="price">Price   :  ₹2,800</p>
             <p class="rating">Rating<br>★★★★☆</p>
             <button>Add to Cart</button>
         </div>
         <div class="product">
-            <img src="creatathon/Meta Quest 2 — Advanced All-In-One Virtual Reality Headset — 128 GB.jpg" alt="Gadget 8"  height="50%">
+            <img src="creatathon/VRheadset.jpg" alt="vrheadset"  height="50%">
             <h3>VIRUSU Monster 3d VR headset box <br>with remote controller for gaming  (Smart Glasses, Black)</h3>
             <p class="price">Price   :  $399</p>
             <p class="rating">Rating<br>★★★★☆</p>
             <button>Add to Cart</button>
         </div>
         <div class="product">
-            <img src="creatathon/pTron Fusion Evo v2 10W Bluetooth Speaker 5_0 Mini Soundbar, 10Hrs Playback, Stereo Soundbar for Phone_TV_Laptop_Tablets_Projectors, Multi Modes Aux_TF Card_USB Drive & 1200mAh Battery (Grey).jpg" alt="Gadget 9"   height="35%">
+            <img src="creatathon/ptorn soundbar.jpg" alt="soundbar"   height="35%">
             <h3>PTron Jazz Pro X1 240 W Bluetooth Soundbar  (Black, 2.1 Channel)</h3>
             <p>Portable speaker with excellent sound quality.</p>
             <p class="price">Price   :  ₹2,599</p>
@@ -184,7 +184,7 @@
             <button>Add to Cart</button>
         </div>
         <div class="product">
-            <img src="creatathon/Echo (4th Gen) _ With premium sound, smart home hub, and Alexa _ Charcoal.jpg" alt="Gadget 10">
+            <img src="creatathon/Alexa.jpg" alt="alexa">
             <h3>Alexa Amazon Echo (4th Gen)| Premium sound powered by Dolby <br>and Alexa with Alexa Assistant Smart Speaker  (Black)</h3>
             <p>Control your smart home devices with ease.</p>
             <p class="price">Price   :  ₹9,999</p>
@@ -192,71 +192,70 @@
             <button>Add to Cart</button>
         </div>
         <div class="product">
-            <img src="creatathon/Фитнес-браслет Xiaomi Mi Smart Band 6 помогает….jpg" alt="Gadget 11"  height="45%" width="45%">
+            <img src="creatathon/miband.jpg" alt="miband"  height="45%" width="45%">
             <h3>Mi Smart Band 5  (Black Strap, Size : Regular)</h3>
             <p class="price">Price   :  ₹1,944</p>
             <p class="rating">Rating<br>★★★★☆</p>
             <button>Add to Cart</button>
         </div>
         <div class="product">
-            <img src="creatathon/Venanoci Smart Light Bulb 2_4G(Not 5G), WiFi LED RGBCW Color Changing Bulbs 2700K-6500K with White Lights Work with Alexa, Echo, Google Home and IFTTT(No Hub Required), A19 E26 60W Equivalent-3 Pack.jpg" alt="Gadget 12">
+            <img src="creatathon/smart bulb.jpg" alt="smart bulb">
             <h3>HAVELLS 9w Glamax Color B22 Smart Bulb</h3>
             <p class="price">Price   :  ₹799</p>
             <p class="rating">Rating<br>★★★★☆</p>
             <button>Add to Cart</button>
         </div>
         <div class="product">
-            <img src="creatathon/Joby Magnetic USB-C Wireless Phone Charger.jpg" alt="Gadget 13">
+            <img src="creatathon/wirelesscharger.jpg" alt="wireless charger">
             <h3>Apple MagSafe MHXH3ZM/A Charging Pad</h3>
             <p class="price">Price   :  ₹4,500</p>
             <p class="rating">Rating<br>★★★★☆</p>
             <button>Add to Cart</button>
         </div>
         <div class="product">
-            <img src="creatathon/LEVOIT Smart Thermostat for Home, WiFi….jpg" alt="Gadget 14">
+            <img src="creatathon/Smart thermostat.jpg" alt="thermostat">
             <h3>amiciSmart WIFI Digital Thermostat, AC220V Temperature Controller -40°~99.9°C <br>for Incubator Temperature Sensor and Controller Electronic Hobby Kit</h3>
             <p class="price">Price   :  ₹3,279</p>
             <p class="rating">Rating<br>★★★★☆</p>
             <button>Add to Cart</button>
         </div>
         <div class="product">
-            <img src="creatathon/6 Best Robot Vacuums for the Easiest Cleaning Ever.jpg" alt="Gadget 15">
+            <img src="creatathon/vacuumcleaner.jpg" alt="vacuum cleaner">
             <h3>Mi Robot Vacuum Cleaner S10 Robotic Floor Cleaner (WiFi Connectivity)  (Black)</h3>
-            <p>Automated cleaning with smart navigation.</p>
             <p class="price">Price   :  ₹16,999</p>
             <p class="rating">Rating<br>★★★★☆</p>
             <button>Add to Cart</button>
         </div>
         <div class="product">
-            <img src="creatathon/Up to 25_ Off.jpg" alt="Gadget 16" height="50%">
+            <img src="creatathon/smart doorbell.jpg" alt="doorbell" height="50%">
             <h3>amiciSmart Automatic Motion Activated Door Bell with PIR Sensor,<br>36 Chime and RGB Indication Wireless Door Chime  (36 Tunes)</h3>
             <p class="price">price   :  ₹2,099</p>
             <p class="rating">Rating<br>★★★★☆</p>
             <button>Add to Cart</button>
         </div>
         <div class="product">
-            <img src="creatathon/Amazon Fire TV Stick, sharp picture quality, fast streaming, free & live TV, Alexa Voice Remote with TV controls.jpg" alt="Gadget 17"  height="50%">
+            <img src="creatathon/Amazon Firestick.jpg" alt="fire stick"  height="50%">
             <h3>Firetv Stick Lite with all-new Alexa Voice Remote Lite, HD Media Streaming Device  (Black)</h3>
             <p class="price">Price   :  ₹3,399</p>
             <p class="rating">Rating<br>★★★★☆</p>
             <button>Add to Cart</button>
         </div>
         <div class="product">
-            <img src="creatathon/Ultimate Home Theater Android 110 Projector with 4K HD and WiFi 6 - HY300-US-NEW.jpg" alt="Gadget 18"  height="50%">
+            <img src="creatathon/projector.jpg" alt="projector"  height="50%">
             <h3>TOPPRO HY300 1GB/8GB, HD Android 11 Projector WiFi 6/BT 5.0 180° Rotation Auto Keystone<br> (4500 lm / 1 Speaker / Wireless / Remote Controller) Portable Projector  (White)</h3>
             <p class="price">Price   :  ₹6,149</p>
             <p class="rating">Rating<br>★★★★☆</p>
             <button>Add to Cart</button>
         </div>
         <div class="product">
-            <img src="creatathon/digital locks.jpg" alt="Gadget 19">
+            <img src="creatathon/digital locks.jpg" alt="smart lock">
             <h3>Godrej Catus Connect I Smart Digital Lock for Wooden Door |<br> 5 in 1 Access I 3 Bolts Smart Door Lock</h3>
             <p class="price">Price   :  ₹12,129</p>
             <p class="rating">Rating<br>★★★★☆</p>
             <button>Add to Cart</button>
         </div>
         <div class="product">
-            <img src="creatathon/Smart Plug EIGHTREE, Alexa Smart Plugs That Work with Alexa and Google Home.jpg" alt="Gadget 20">
+            <img src="creatathon/smart plug.jpg" alt="smart plug">
             <h3>OZONE (10A+16A)x2 WiFi Smart Plug with Energy Monitoring with <br>Voice & App Control Smart Plug  (White)</h3>
             <p class="price">Price   :  ₹3,508</p>
             <p class="rating">Rating<br>★★★★☆</p>
