--- a/products.html
+++ b/products.html
@@ -135,7 +135,7 @@
             <button>Buy Now</button>
         </div>
         <div class="product">
-            <img src="https://via.placeholder.com/250" alt="Gadget 3">
+            <img src="creatathon/lapto.jpg" alt="laptop">
             <h3>Laptop</h3>
             <p>Lightweight and portable with long battery life.</p>
             <p class="price">$999</p>
@@ -144,7 +144,7 @@
             <button>Buy Now</button>
         </div>
         <div class="product">
-            <img src="creatathon/smartwatch.jpg" alt="Gadget 4">
+            <img src="creatathon/smartwatch.jpg" alt="smart watch">
             <h3>The Amazfit GTR 2 is a sleek design with 1.39-inch AMOLED display <br>with 454 x 454 pixel resolution, providing clear visuals.</h3>
             <p class="price">Price   :  ₹7,999</p>
             <p class="rating">Rating <br>★★★★☆</p>
