--- a/buynow.html
+++ b/buynow.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <nav>
-        <div class="logo">YourLogo</div>
+        <div class="logo">
+            <img src="C:\Users\sathi\OneDrive\Documents\GitHub\E-Commerce\images\Zaporia.png">
+        </div>
     
         <ul>
             <li><a href="index.html">Home</a></li>
